# UTFTestTask

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml
food_project/food_app/: models.py  serializers.py  urls.py  views.py
food_project/food_app/management/commands/: create_data.py
food_project/food_app/migrations/: 0001_initial.py
food_project/food_project/: asgi.py  settings.py  urls.py  wsgi.py
food_project/model_utils/: gen_data.py  models.py
