[tool.poetry]
name = "utf-tech"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "utf"}]

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
gunicorn = "^23.0.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
